# LAS-Point-Cloud-Viewer

./: .gitattributes  .gitignore  CHECKPOINT_11_RESULTS.md  CHECKPOINT_11_TESTING.md  CMakeLists.txt  DEMO_CHECKLIST.md  FINAL_VALIDATION_REPORT.md  FIX_MEMORY_ISSUE.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_TESTING_GUIDE.md  PROJECT_COMPLETE.md  QUICK_START.md  README.md  REBUILD_INSTRUCTIONS.md  TASK_14_SUMMARY.md  build_native.sh  build_wasm.sh  check_wasm_memory.sh  generate_test_las.py  install_emscripten.sh  package-lock.json  package.json  verify_checkpoint_11.sh
.kiro/specs/las-point-cloud-viewer/: design.md  requirements.md  tasks.md
src/: las_parser.cpp  las_parser.h  spatial_index.cpp  spatial_index.h  wasm_interface.cpp
tests/: CMakeLists.txt  test_las_parser.cpp  test_main.cpp  test_spatial_index.cpp  test_wasm_interface.cpp
web/: CameraController.js  CameraController.test.js  ColorMapper.js  ColorMapper.property.test.js  ColorMapper.test.js  ErrorHandler.js  ErrorHandler.test.js  PointCloudRenderer.js  PointCloudRenderer.test.js  PointCloudViewer.js  README.md  UIController.js  WASMLoader.js  checkpoint-11-test.js  index.html  integration.test.js  main.js  performance-test.html  performance-test.js  style.css  test-basic-render.html  test-complete-data.html  wasm-stub.js
